# crustoice

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
apps/desktop/: components.json  desktop.xml  package.json  pnpm-lock.yaml  repomix-output.xml  (+2 more)
apps/server/: Cargo.toml  repomix-output.xml  server.xml
apps/server/src/: main.rs  state.rs  ws.rs
apps/server/src/entities/: categories.rs  channels.rs  guild_members.rs  guilds.rs  invites.rs  messages.rs  mod.rs  prelude.rs  presence_presets.rs  relationships.rs  user_settings.rs  users.rs
apps/server/src/extractors/: auth.rs
apps/server/src/requests_http/: auth.rs  channels.rs  guilds.rs  mod.rs
apps/server/src/requests_http/auth/: login.rs  register.rs
apps/server/src/requests_http/channels/: create.rs  delete.rs  get_history.rs
apps/server/src/requests_http/guilds/: create.rs  create_invite.rs  delete.rs  mod.rs  remove_member.rs
apps/server/src/requests_http/users/: get_guilds.rs  get_me.rs  join_guild.rs  leave_guild.rs  mod.rs  update_account.rs  update_profile.rs
apps/server/src/requests_ws/: broadcast.rs  chat.rs  mod.rs
apps/server/src/routes/: auth.rs  channels.rs  guilds.rs  mod.rs  upload.rs  users.rs
apps/server/src/services/: broadcast.rs  chat.rs  cron.rs  data_loader.rs  identity.rs  jwt.rs  mod.rs  presence.rs  r2.rs  user_service.rs
apps/server/src/services/auth/: login.rs  mod.rs  register.rs  verify_password.rs
apps/server/src/services/categories/: create.rs
apps/server/src/services/channels/: create.rs  delete.rs  get_history.rs  mod.rs
apps/server/src/services/guilds/: create.rs  create_invite.rs  delete.rs  fetch.rs  mod.rs  remove_member.rs
apps/server/src/services/storage/: r2.rs
apps/server/src/services/users/: fetch.rs  join_guild.rs  leave_guild.rs  mod.rs  update.rs
apps/server/src/services/ws/: broadcast.rs  chat.rs  identity.rs  mod.rs  presence.rs
db/: migration_down.sh  migration_up.sh
docs/: desired_results.md
migration/: Cargo.toml
(+130 files in other folders)
