[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
futures = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }
shared = { path = "../../packages/shared" }
serde = { workspace = true }
serde_json = "1.0.149"
deadpool-redis = "0.23.0"
scylla = { version = "1.5.0", features = ["chrono-04"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
aws-config = "1.8.14"
aws-sdk-s3 = { version = "1.1" }
tower-http = { version = "0.6.8", features = ["cors"] }
